fix class issue and icon alignment

--- a/frontend/scss/components/textbook__sidebar.scss
+++ b/frontend/scss/components/textbook__sidebar.scss
@@ -181,6 +181,11 @@
 
     #app-panel-language-toggle {
       display: none;
+      text-align: center;
+      
+      svg {
+        display: inline-block;
+      }
     }
   }
   
